--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "next": "13.4.19",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "replicate": "^0.12.3"
+    "replicate": "^0.12.3",
+    "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
