--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "13.4.19",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-spinners": "^0.13.8",
     "replicate": "^0.12.3",
     "typewriter-effect": "^2.21.0"
   },
