--- a/package.json
+++ b/package.json
@@ -14,13 +14,13 @@
     "@vercel/og": "^0.5.17",
     "eslint": "8.49.0",
     "eslint-config-next": "13.0.7",
+    "firebase": "^10.4.0",
     "next": "13.4.19",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-spinners": "^0.13.8",
     "replicate": "^0.12.3",
-    "typewriter-effect": "^2.21.0",
-    "firebase" : "10.4.0"
+    "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
