--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-spinners": "^0.13.8",
-    "replicate": "^0.12.3",
-    "typewriter-effect": "^2.21.0"
+    "replicate": "^0.12.3"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
