--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,5 +14,6 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 18
-      - run: npm ci
-      - run: npm test
+      - run: yarn install
+      - run: npm run build
+      - run: npm run start
