--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "eslint": "8.49.0",
     "eslint-config-next": "13.0.7",
     "firebase": "^10.4.0",
+    "firebase-admin": "^11.11.0",
     "next": "13.4.19",
+    "next-firebase-auth": "^1.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-loading-skeleton": "^3.3.1",
