--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "test": "npm run lint && npm run build"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.17",
+    "@heroicons/react": "^2.0.18",
     "@next/font": "13.4.19",
     "@vercel/og": "^0.5.17",
     "eslint": "8.49.0",
     "eslint-config-next": "13.0.7",
     "firebase": "^10.4.0",
     "firebase-admin": "^11.11.0",
+    "firebaseui": "^6.1.0",
     "next": "13.4.19",
     "next-firebase-auth": "^1.0.0",
     "react": "18.2.0",
