--- a/package.json
+++ b/package.json
@@ -18,11 +18,12 @@
     "eslint-config-next": "13.0.7",
     "firebase": "^10.4.0",
     "firebase-admin": "^11.11.0",
-    "firebaseui": "^6.1.0",
     "next": "13.4.19",
     "next-firebase-auth": "^1.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-firebase-hooks": "^5.1.1",
+    "react-firebaseui": "^6.0.0",
     "react-loading-skeleton": "^3.3.1",
     "react-spinners": "^0.13.8",
     "replicate": "^0.12.3"
