--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "getting-started-web-app",
-  "version": "0.1.0",
+  "name": "mini-diffusion",
+  "version": "0.1.3",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -12,7 +12,6 @@
   "dependencies": {
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
-    "@next/font": "13.4.19",
     "@vercel/og": "^0.5.17",
     "eslint": "8.49.0",
     "eslint-config-next": "13.0.7",
